# nfl_sims

./: .gitignore  Cargo.toml  README.md
rust/nfl_pbp_sim/: Cargo.toml
rust/nfl_pbp_sim/src/: lib.rs  start.rs
rust/nfl_pbp_sim/src/box_score/: defense.rs  kicking.rs  mod.rs  passing.rs  skill_player.rs
rust/nfl_pbp_sim/src/game_loop/: mod.rs  play_calling.rs
rust/nfl_pbp_sim/src/game_loop/field_goals/: mod.rs
rust/nfl_pbp_sim/src/models/: features.rs  mod.rs
rust/nfl_pbp_sim/src/models/air_yards/: coef.rs  mod.rs
rust/nfl_pbp_sim/src/models/clock/: coef.rs  mod.rs
rust/nfl_pbp_sim/src/models/defensive_timeout/: coef.rs  mod.rs
rust/nfl_pbp_sim/src/models/dropback/: coef.rs  mod.rs
rust/nfl_pbp_sim/src/models/field_goals/: coef.rs  mod.rs
rust/nfl_pbp_sim/src/models/kickoff/: coef.rs  mod.rs
rust/nfl_pbp_sim/src/models/offensive_timeout/: coef.rs  mod.rs
rust/nfl_pbp_sim/src/models/penalty/: coef.rs  mod.rs
rust/nfl_pbp_sim/src/models/playcall/: coef.rs  mod.rs
rust/nfl_pbp_sim/src/models/post_pass_penalty/: coef.rs  mod.rs
rust/nfl_pbp_sim/src/models/post_rush_penalty/: coef.rs  mod.rs
rust/nfl_pbp_sim/src/params/: burn_in.rs  injury.rs  mod.rs  quarterback.rs  skill_player.rs  team.rs  weather.rs
rust/nfl_pbp_sim/src/projections/: math.rs  mod.rs  odds.rs  writer.rs
rust/nfl_pbp_sim/src/sim/: box_score.rs  mod.rs  play_result.rs  run.rs
rust/nfl_pbp_sim/src/state/: clock.rs  down.rs  game_state.rs  mod.rs  yards_to_goal.rs
rust/nfl_pbp_sim/src/util/: clock.rs  mod.rs  stats.rs
src/: pyproject.toml
src/pbp/: data.py
(+41 files in other folders)
