[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target_version = ['py311']

[tool.mypy]
disallow_untyped_defs = true

[tool.isort]
profile = "hug"

[tool.poetry]
name = "nfl_sims"
version = "0.0.1"
description = "A play-by-play NFL simulator"
authors = ["Christian Drappi <christiandrappi@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.6"
numpy = "^1.26.2"
requests = "^2.31.0"
pandas = "^2.1.3"
scipy = "^1.11.4"
python-dateutil = "^2.8.2"
scikit-learn = "^1.3.2"
notebook = "^7.0.6"
matplotlib = "^3.8.2"
nfl-data-py = "^0.3.1"
ipywidgets = "^8.1.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
isort = "^5.11.4"
types-frozendict = "^2.0.9"
types-requests = "^2.28.11.12"
flake8 = "^6.0.0"
ipython = "^8.10.0"
