[package]
name = "nfl_pbp_sim"
version = "0.1.0"
edition = "2021"
authors = ["Christian Drappi <christiandrappi@gmail.com>"]

[dependencies]
csv = "1.1"
env_logger = "0.9"
log = "0.4.14"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.16.0"
lazy_static = "1.4.0"
progress_bar = "1.0.5"
rust_decimal = "1.33.1"
